# rebuild-AgenticAI

./: .env.example  .gitignore  README.md  docs_v1_v2_gap_analysis.md  main.py  pyproject.toml  run_linux.sh  run_mac.sh  run_windows.bat  setup.py
backend/: requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  analysis.py  chat.py
backend/app/core/: __init__.py  agent.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  conversation_service.py  deepseek_service.py  llm_service.py  mcp_service.py  patch_orchestrator.py  reasoning_orchestrator.py  repo_analyzer.py  user_profile_service.py  v1_parity_pipeline.py
backend/app/tools/: __init__.py  base.py  tavily_search.py
backend/app/utils/: __init__.py  exceptions.py  logger.py  startup_check.py
frontend/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  index.css.b
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/intent/: route.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/Chat/: ChatInterface.tsx  ChatInterface.tsx.b  ConversationSidebar.tsx  InputArea.tsx  MessageList.tsx  MessageList.tsx.b
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/services/: api.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: index.ts
