[project]
name = "agentic-dev-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiosqlite==0.22.1",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchain-qdrant==0.1.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "qdrant-client==1.16.2",
    "sqlalchemy==2.0.46",
    "tiktoken==0.12.0",
    "uvicorn[standard]==0.39.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
